# Declutter

./: pyproject.toml
.github/workflows/: pipeline.yml
src/declutter/: __init__.py  functions.py  main.py
test/: test_declutter.py
