[project]
name = "declutter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhinav Srivastava", email = "look4abhinav@outlook.in" }
]
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
